tests/ui/feature-gates/issue-43106-gating-of-test.stderr
error: `test` attribute cannot be used at crate level
  --> $DIR/issue-43106-gating-of-test.rs:4:1
   |
LL | #![test = "4200"]
   | ^^^^^^^^^^^^^^^^^
   |
help: perhaps you meant to use an outer attribute
   |
LL - #![test = "4200"]
LL + #[test = "4200"]
   |

error: aborting due to 1 previous error

